# directory-issues

./: .gitignore  README.md  classes.py  issues.py  issues_demo.ipynb  pyproject.toml  source_issues.py  test_issues.py
directory_issues/: __init__.py  classes.py  issues_demo.ipynb
directory_issues/clients/: zammad_client.py
directory_issues/issues/: __init__.py  feed_issues.py  source_issues.py  source_volume_issues.py  test_issues.py
directory_issues/scrapers/: lni_scraper.py  thepaperboy_scraper.py
directory_issues/scrapers/utils/: database.py  scraper.py
directory_issues/scripts/: client.py
directory_issues/scripts/sources/: base.py  list_sources_in_multi_partisanship_collections.py  list_sources_with_invalid_state_mapping.py  update_language.py  update_publication_date.py  validate_state_collection_mapping.py
directory_issues/templates/: source_issues_message.j2
issues/: source_issues.py  test_issues.py
notebooks/: SourceTest.ipynb  collections_demo.ipynb  compare_directory_with_lni.ipynb  compare_directory_with_thepaperboy.ipynb  issues_demo.ipynb  source_demo.ipynb  source_interface_demo.ipynb  storysniffer_demo.ipynb  the_paperboy_sources.ipynb  zammad_demo.ipynb
templates/: source_issues_message.j2
